skirmish.css
body {
    margin: 0px; /*Unsetting browser default margin of 8px*/
}

}

#sidepanel {
    min-width: 80px;
    width: 7%;
    height: 120vh;
    position: absolute;
    left: 0%;
    border-right: "1px solid #000000";
}

#map {
    height:120vh;
    width: 93%;
    max-width: calc(100% - 80px);
    position: absolute;
    right: 0%;
}

#Buttons {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
}

#DarkModeButton {
    order:1;
    flex-grow: 1;
}

#LightModeButton {
    order:1;
    flex-grow: 1;
    display: none;
}

#SpawnRedButton {
    display: inline;
    order:2;
    flex-grow:1;
}

#SpawnBlueButton {
    display: inline;
    order:3;
    flex-grow:1;
}



.SelectedP1, .SelectedP2 {
    border: 1px solid #000000;
}

.Blob:hover {
    border: 1px solid #000000;
}

.Blob {
    border-radius: 50%;
    position: absolute;
}

.BlueBlob {
    background: #0000FF;
}

.RedBlob {
    background: #ff0000;
}

.SmallBlob {
    height: 20px;
    width: 20px;
}


#RedBlob1 {
    top: 4%;
    left: 3%;
}

#RedBlob2 {
    top: 20%;
    left: 3%;
}

#BlueBlob1 {
    bottom: 4%;
    right: 3%;
}

#BlueBlob2 {
    bottom: 45%;
    right: 55%;
}

#RedBlob3 {
    bottom: 55%;
    right: 45%;
}

#RedBlob4 {
    bottom: 50%;
    right: 55%;
}

#RedBlob5 {
    bottom: 50%;
    right: 45%;
}

